--- a/Finshark/package.json
+++ b/Finshark/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.6",
     "uuid": "^11.0.5"
   },
